--- a/index.html
+++ b/index.html
@@ -299,38 +299,47 @@
             </div>
         </section>
 
-        <section class="container">
-            <h2 class="about-header">About Me</h2>
-            <div class="about-me">
-                <div class="about-left">
-                    <img src="images/rakib.png" alt="">
+        <div class="up-bg">
+
+        </div>
+
+        <section class="bonuse">
+
+            <div class="bonuse-flex container">
+                <div class="bonuse-left">
+
+                    <h1>My Skill</h1>
+                    <p>I Start Learning Website development. I just learn 3 things perfectly.</p>
+                    <ul>
+                        <li>
+                            <i class="fas fa-check-circle">
+                                HTML
+                            </i>
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle">
+                                CSS
+                            </i>
+                        </li>
+                        <li>
+                            <i class="fas fa-check-circle">
+                                Responsive
+                            </i>
+                        </li>
+                    </ul>
                 </div>
-                <div class="about-right">
-                    <div class="top-row">
-                        <div class="margin-left">
-                            <img src="images/vision.png" alt="">
-                        </div>
-                        <div class="margin-right">
-                            <h2 class="vission">Vission</h2>
-                            <p>When I become a full stack web developer, I will try to make free to use necessary
-                                website for all.</p>
-                        </div>
-                    </div>
-                    <div class="bottom-row">
-                        <div class="margin-left">
-                            <h2 class="mission">Mission</h2>
-                            <p>My 2022 mission is work hard everyday and last of this year I will became a full stack
-                                web developer.</p>
 
-                        </div>
-                        <div class="margin-right">
-                            <img src="images/mission.png" alt="">
-                        </div>
+                <div class="bonuse-right">
 
-                    </div>
+                    <img class="bonuse-img" src="images/bonuse-right.png" alt="">
                 </div>
             </div>
         </section>
+        <div class="down-bg">
+
+        </div>
+
+
 
 
     </main>
