--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                 <div class="influencer-details">
                     <h1>Start your Journey as influencer </h1>
                     <p>An influencer is someone in your niche or industry with sway over your target audience.
-                        Influencers have specialized knowledge, authority or insight into a specific subject. Their
-                        pre-existing presence in a niche makes them a useful launching pad for brands in search of
-                        credibility. </p>
+                        Influencers have specialized knowledge, authority or insight into a specific subject. </p>
                     <div class="preebook">
                         <a class="preebook-btn" href="">Preebook now <span> <i
                                     class="fas fa-arrow-right"></i></span></a>
